--- a/index.html
+++ b/index.html
@@ -1,27 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <title>Number Facts</title>
-</head>
-<body class="bg-dark">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 mx-auto">
-        <div class="card bg-primary text-white mt-5 p-4">
-          <h1>Number Facts</h1>
-          <p>Enter a number</p>
-          <input type="number" class="form-control form-control-lg" id="numInput" placeholder="Enter any number">
-          <div id="fact" class="card-body">
-            <h4 class="card-title">Number Fact</h4>
-            <p id="fact-text" class="card-text"></p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <title>Number Facts</title>
+    <style>
+      #fact {
+        display: none;
+      }
+    </style>
+  </head>
+  <body class="bg-dark">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 mx-auto">
+          <div class="card bg-primary text-white mt-5 p-4">
+            <h1>Number Facts</h1>
+            <p>Enter a number</p>
+            <input
+              type="number"
+              class="form-control form-control-lg"
+              id="num-input"
+              placeholder="Enter any number"
+            />
+            <div id="fact" class="card-body">
+              <h4 class="card-title">Number Fact</h4>
+              <p id="fact-text" class="card-text"></p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  
-</body>
+
+    <script>
+      const fact = document.querySelector('#fact');
+      const factText = document.querySelector('#fact-text');
+      const numInput = document.querySelector('#num-input');
+      numInput.addEventListener('input', getFact);
+      function getFact() {
+        const number = numInput.value;
+        const xhr = new XMLHttpRequest();
+        xhr.open('GET', `http://numbersapi.com/${number}`);
+        xhr.onload = function () {
+          if (xhr.status === 200 && number !== '') {
+            fact.style.display = 'block';
+            factText.innerText = xhr.responseText;
+          }
+          if (xhr.status === 200 && number === '') {
+            fact.style.display = 'none';
+          }
+        };
+
+        xhr.send();
+      }
+    </script>
+  </body>
 </html>
